# Gaussian-Utils

./: .gitignore  CMakeLists.txt
.github/workflows/: runTests.yml
cmake/: FetchEigen.cmake
src/: CMakeLists.txt
src/header/: CoviarianceAware.h  Distribution.h  Divergence.h  GaussianDistribution.h  GaussianDistributionFactory.h  GaussianDistributionSampler.h  GaussianDivergence.h  GaussianUtils.h  MeanAware.h  Sampler.h  Utils.h
src/header/GaussianUtils/: Error.h  GaussianDistribution.h  GaussianDistributionFactory.h  GaussianDistributionSampler.h  TrainSet.h  Utils.h
src/header/GaussianUtils/components/: ConditionedCapable.h  DivergenceAware.h  DrawSamplesCapable.h  LogDensityAware.h  MeanAware.h  StateSpaceSizeAware.h
src/header/components/: CoviarianceAware.h  RandomModelFactory.h
src/src/: Distribution.cpp  GaussianDistribution.cpp  GaussianDistributionFactory.cpp  GaussianDistributionSampler.cpp  GaussianUtils.cpp  Sampler.cpp  TrainSet.cpp  Utils.cpp
tests/: CMakeLists.txt  Packer.hpp  Test-01-DistributionCreation.cpp  Test01-DistributionCreation.cpp  Test01-PdfEvaluation.cpp  Test02-PdfEvaluation.cpp  Test03-Sampling.cpp  Test04-Conditioned.cpp
tests/src/: CMakeLists.txt
tests/src/header/: TestSampler.h
tests/src/src/: TestSampler.cpp
